# Data-Labeling

./: .gitignore  API_ROUTES.md  CLEANUP_REPORT.md  Cargo.toml  Dockerfile.backend  README.md  data.json  docker-compose.yml  generate_data.py
frontend/: .eslintrc.js  Dockerfile  REFACTORING.md  nginx.conf  package-lock.json  package.json  test-api.html
frontend/public/: data.json  env-config.js  index.html
frontend/src/: App.tsx  App.tsx.backup  config.ts  index.css
frontend/src/components/: ErrorBoundary.tsx  GroupCard.tsx  Header.tsx  ImageCard.tsx  ImageModal.tsx  Loading.tsx  Login.tsx  Modal.tsx  Sidebar.tsx  index.ts
frontend/src/components/views/: Chat.tsx  Dashboard.tsx  Gallery.tsx  GroupDetail.tsx  Groups.tsx  TagReview.tsx  Tags.tsx  Upload.tsx  index.ts
frontend/src/contexts/: AppContext.tsx
frontend/src/hooks/: useApiCall.ts  useAuth.ts  useData.ts  useForm.ts  useLocalStorage.ts
frontend/src/services/: api.ts  chat.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  helpers.ts  validations.ts
src/: main.rs
src/handlers/: auth_handlers.rs  chat_handlers.rs  export_handlers.rs  group_handlers.rs  image_handlers.rs  mod.rs  openai_handlers.rs  tag_handlers.rs
src/models/: annotations.rs  group.rs  image.rs  mod.rs  tag.rs  user.rs
src/services/: data_service.rs  mod.rs  user_service.rs
